<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#e4dede"
    >



    <EditText
        android:textColor="@color/colorText"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/enter_age"
        android:textColorHint="@color/colorHint"
        android:layout_marginBottom="@dimen/margin_bottom"

        />

    <EditText
        android:textColor="@color/colorText"
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColorHint="@color/colorHint"
        android:hint="@string/enter_distance"
        android:layout_marginBottom="@dimen/margin_bottom"


        />

    <EditText
        android:textColor="@color/colorText"
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorHint"
        android:hint="@string/enter_email"
        />

    <EditText
        android:textColor="@color/colorText"
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:hint="@string/enter_password"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"

        android:text="Save" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms_and_conditions"
         android:layout_marginBottom="@dimen/margin_bottom"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
         android:textAlignment="center"
        android:text="@string/check_our_products" />
</LinearLayout>